learningSalesforce/force-app/main/default/objects/Event__c/fields/Event_Day_Left__c.field-meta.xml
<CustomField>
    <fullName>Event_Day_Left__c</fullName>
    <formula>Event_Date__c-today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Day Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>