learningSalesforce/force-app/main/default/objects/Event__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <description>Event Location</description>
    <label>Event Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>