learningSalesforce/force-app/main/default/objects/Event__c/fields/Event_Registrations_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Registrations_Count__c</fullName>
    <description>Event Registrations Cout</description>
    <label>Event Registrations Count</label>
    <summaryForeignKey>Event_Registrations__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>