learningSalesforce/force-app/main/default/objects/Event__c/validationRules/Event_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date</fullName>
    <active>true</active>
    <description>The rule should display an error message if the user tries to save an event with a past date</description>
    <errorConditionFormula>Event_Date__c &lt;today()</errorConditionFormula>
    <errorMessage>Event Date should not be past date</errorMessage>
</ValidationRule>